# bluejay

./: .flatpak-manifest.json  .gitignore  CMakeLists.txt  LICENSE  README.md  REUSE.toml  com.github.ebonjaeger.bluejay.desktop  com.github.ebonjaeger.bluejay.metainfo.xml  io.github.ebonjaeger.bluejay.desktop  io.github.ebonjaeger.bluejay.metainfo.xml  updatePot.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
.tx/: config
po/: bluejay.pot  cs.po  it.po
po/cs/: bluejay.po
po/de/: bluejay.po
po/fr/: bluejay.po
po/it/: bluejay.po
po/nl/: bluejay.po
po/pt_BR/: bluejay.po
po/uk/: bluejay.po
po/zh_CN/: bluejay.po
snap/: snapcraft.yaml
src/: CMakeLists.txt  application.cpp  application.h  bluetooth.cpp  bluetooth.h  btagent.cpp  btagent.h  config-bluejay.h.cmake  devicesproxymodel.cpp  devicesproxymodel.h  main.cpp  navigationcontroller.cpp  navigationcontroller.h  pin-code-database.xml  voidrequest.cpp  voidrequest.h
src/bluejay/: Bluetooth.cpp  Bluetooth.h  CMakeLists.txt  main.cpp
src/bluejay/models/: devicesproxymodel.cpp  devicesproxymodel.h
src/bluejay/qml/: ApplicationMenu.qml  DeviceDialog.qml  DevicePage.qml  DeviceRow.qml  DeviceScanner.qml  HeaderBar.qml  Main.qml  MainPage.qml  script.js
src/bluejay/qml/components/: HeaderButton.qml
src/bluejay/qml/delegates/: Device.qml
src/qml/: ConfirmationDialog.qml  DeviceDelegate.qml  DevicePage.qml  DeviceScanner.qml  HeaderBar.qml  Main.qml  MainPage.qml  PasskeyDialog.qml  WelcomePage.qml
src/qml/components/: FormButton.qml  FormToggleButton.qml
src/qml/delegates/: Device.qml
src/sendto/: CMakeLists.txt  devicerow.cpp  devicerow.h  devicerow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
